--- a/microservicecloud-eureka-7001/pom.xml
+++ b/microservicecloud-eureka-7001/pom.xml
@@ -22,6 +22,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+	  	<!-- Basic认证 -->
+	    <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 	</dependencies>
   
 </project>
