--- a/microservicecloud-consumer-dept-80/src/main/resources/application.yml
+++ b/microservicecloud-consumer-dept-80/src/main/resources/application.yml
@@ -1,9 +1,24 @@
 server:
   port: 80
 
+
+spring:
+  application:
+    name: microservicecloud-consumer
+  sleuth:
+    sampler:
+      percentage: 1.0
+  zipkin:
+    base-url: http://localhost:9001
+
+
 eureka:
   client:
-    register-with-eureka: false
     service-url:
      #defaultZone: http://eureka7001.com:7001/eureka/, http://eureka7002.com:7002/eureka/, http://eureka7003.com:7003/eureka/,
-      defaultZone: http://localhost:7001/eureka/
+      defaultZone: http://root:123456@localhost:7001/eureka/
+
+logging:
+  level: info
+
+
