--- a/microservicecloud-provider-dept-8002/pom.xml
+++ b/microservicecloud-provider-dept-8002/pom.xml
@@ -27,7 +27,19 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
-		<dependency>
+
+	   <!-- 链路追踪 -->
+	   <dependency>
+		   <groupId>org.springframework.cloud</groupId>
+		   <artifactId>spring-cloud-starter-sleuth</artifactId>
+	   </dependency>
+	   <dependency>
+		   <groupId>org.springframework.cloud</groupId>
+		   <artifactId>spring-cloud-starter-zipkin</artifactId>
+	   </dependency>
+
+
+	   <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
