--- a/microservicecloud-provider-dept-8002/src/main/resources/application.yml
+++ b/microservicecloud-provider-dept-8002/src/main/resources/application.yml
@@ -9,13 +9,18 @@ mybatis:
     
 spring:
    application:
-    name: microservicecloud-dept 
+    name: microservicecloud-dept
+   zipkin:
+     base-url: http://localhost:9001
+   sleuth:
+     sampler:
+       percentage: 1.0   #表100%采样
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
     url: jdbc:mysql://localhost:3306/cloudDB02              # 数据库名称
     username: root
-    password: root
+    password: 123456
     dbcp2:
       min-idle: 5                                           # 数据库连接池的最小维持连接数
       initial-size: 5                                       # 初始化连接数
@@ -25,7 +30,7 @@ spring:
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url: 
-      defaultZone: http://localhost:7001/eureka
+      defaultZone: http://root:123456@localhost:7001/eureka
       #defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
   instance: 
     instance-id: microservicecloud-dept8002
@@ -37,3 +42,6 @@ info:
   build.artifactId: $project.artifactId$
   build.version: $project.version$
 
+
+logging:
+  level: info
